AX: Headers of table not read by VoiceOver https://bugs.webkit.org/show_bug.cgi?id=158693 <rdar://problem/26771065>

Reviewed by Darin Adler.

Source/WebCore:

If a table cell header is hidden, by pushing off screen then the content won't be accessible.
It seems that unless specifically requested (such as using aria-hidden), we should try to return
that table cell header.

Test: accessibility/hidden-th-still-column-header.html

* accessibility/AccessibilityTableColumn.cpp:
(WebCore::AccessibilityTableColumn::headerObjectForSection):

LayoutTests:

* accessibility/hidden-th-still-column-header-expected.txt: Added.
* accessibility/hidden-th-still-column-header.html: Added.


Canonical link: https://commits.webkit.org/183754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210150 268f45cc-cd09-0410-ab3c-d52691b4dbfc